Драг и дроп между списками баз (из коллекций пока нет) Иконка окошек Запрет дублирования баз при редактировании и перетаскивании

--- a/InfoBaseListManager/InfoBaseListManager.csproj
+++ b/InfoBaseListManager/InfoBaseListManager.csproj
@@ -117,7 +117,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Resources\" />
+    <Resource Include="Resources\fav.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
